--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,88 @@
+/* 100vh fix */
+@media (pointer: coarse) {
+  body {
+    overflow: unset;
+  }
+  .scroll-container,
+  .canvas-container,
+  .section-4,
+  .section-4 .poster,
+  .section-animation {
+    height: 100lvh;
+  }
+  .loading,
+  .scroll-container.section-1,
+  .scroll-container.section-1 .canvas-container,
+  .scene {
+    height: 100svh;
+  }
+  .scene {
+    margin-top: -100svh;
+  }
+  .section-2,
+  .section-3 {
+    height: auto;
+    overflow: unset;
+  }
+  .section-2 .long-scroll-container {
+    min-height: 0;
+  }
+  .section-2 .text-blocks-container {
+    margin-top: -100lvh;
+    padding-bottom: 38px;
+  }
+  .section-4 {
+    padding-bottom: 150px;
+  }
+  .section-4.fade-in {
+    animation: none;
+    background: url("../assets/img/section-4.jpg") rgba(233, 138, 249, 0);
+    background-size: auto 100lvh;
+    background-position: 50% 0;
+    background-blend-mode: lighten;
+  }
+}
+@media (max-width: 767.98px) {
+  body {
+    overflow: unset;
+  }
+  .scroll-container,
+  .canvas-container,
+  .section-4,
+  .section-4 .poster,
+  .section-animation {
+    height: 100lvh;
+  }
+  .loading,
+  .scroll-container.section-1,
+  .scroll-container.section-1 .canvas-container,
+  .scene {
+    height: 100svh;
+  }
+  .scene {
+    margin-top: -100svh;
+  }
+  .section-2,
+  .section-3 {
+    height: auto;
+    overflow: unset;
+  }
+  .section-2 .long-scroll-container {
+    min-height: 0;
+  }
+  .section-2 .text-blocks-container {
+    margin-top: -100lvh;
+    padding-bottom: 38px;
+  }
+  .section-4.fade-in {
+    animation: none;
+    background: url("../assets/img/section-4.jpg") rgba(233, 138, 249, 0);
+    background-size: auto 100lvh;
+    background-position: 50% 0;
+    background-blend-mode: lighten;
+  }
+}
+
 /* Menu */
 .hamburger {
   display: none;
@@ -342,6 +427,9 @@
   }
 }
 @media (max-width: 767.98px) {
+  .section-4 {
+    padding-bottom: 320px;
+  }
   .section-4 .socials {
     align-items: center;
     flex-direction: column;
