--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -414,10 +414,13 @@
   }
 }
 @media (max-width: 767.98px) {
+  .section-3 .canvas-sticky-container {
+    height: auto;
+  }
   .section-3 .text-blocks-container {
     margin-bottom: 0;
-    margin-top: 0;
-    padding-top: 66vh;
+    margin-top: -100px;
+    padding-top: 200px;
     overflow: hidden;
   }
   .background-texts {
